LoadableByAddress: fix a crash related to single-element tuples containing a label and a closure.

The canonical type was wrong for such tuples.

https://bugs.swift.org/browse/SR-14046
rdar://73245321